--- a/src/app/admin/components/members/member.component.html
+++ b/src/app/admin/components/members/member.component.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-primary" [disabled]="!adminSignupForm.form.valid"> ลงทะเบียน</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!adminSignupForm.form.valid"> Register</button>
         </form>
     </div>
 </div>
@@ -119,7 +119,7 @@
                     <div class="form-group" id="btn-account">
                         <div class="btn btn-outline-success" id="btn-account">
                             <button type="submit" class="btn btn-success" [disabled]="!editAdminForm.form.valid" data-dismiss="myModal">
-                                บันทึกข้อมูล
+                                Save
                             </button>
                         </div>
                     </div>
