--- a/src/app/users/components/home/home.component.html
+++ b/src/app/users/components/home/home.component.html
@@ -1,3 +1,233 @@
 <title>หน้าแรก | MEBOOKs</title>
 
 <app-banner></app-banner>
+<br>
+<div class="container">
+    <h4 class="fontsize">หนังสือมาใหม่</h4>
+    <div class="row">
+        <!-- BEGIN PRODUCTS -->
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img style="height:325px; width:300px;" src="https://asset.mebmarket.com/meb/server1/31751/Thumbnail/large.gif?2" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img style="height:325px; width:300px;" src="https://images-se-ed.com/ws/Storage/Originals/978974/186/9789741862047L.jpg?h=9c03e4090bc226e1cfbeb3484d824c48" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img style="height:325px; width:300px;" src="http://www.iadth.com/2016/image/cache/catalog/04-mattayom-pai/category-04/file_88_5-800x800.jpg" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img style="height:325px; width:300px;" src="https://asset.mebmarket.com/meb/server1/44544/Thumbnail/large.gif?2" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <!-- END PRODUCTS -->
+    </div>
+</div>
+
+<br>
+<div class="container">
+    <h4 class="fontsize">หนังสือขายดี</h4>
+    <div class="row">
+        <!-- BEGIN PRODUCTS -->
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img src="http://placehold.it/500x400" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img src="http://placehold.it/500x400" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img src="http://placehold.it/500x400" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img src="http://placehold.it/500x400" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <!-- END PRODUCTS -->
+    </div>
+</div>
+
+<br>
+<div class="container">
+    <h4 class="fontsize">หนังสือแนะนำ</h4>
+    <div class="row">
+        <!-- BEGIN PRODUCTS -->
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img src="http://placehold.it/500x400" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img src="http://placehold.it/500x400" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img src="http://placehold.it/500x400" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <span class="thumbnail">
+      			<img src="http://placehold.it/500x400" alt="...">
+      			<h4>Product Tittle</h4>
+      			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+      			<hr class="line">
+      			<div class="row">
+      				<div class="col-md-6 col-sm-6">
+      					<p class="price">$29,90</p>
+      				</div>
+      				<div class="col-md-6 col-sm-6">
+      					<button class="btn btn-success right" ><i _ngcontent-c0="" aria-hidden="true" class="fa fa-search"></i> รายละเอียด</button>
+      				</div>
+      				
+      			</div>
+    		</span>
+        </div>
+        <!-- END PRODUCTS -->
+    </div>
+</div>
