--- a/src/app/admin/components/account/account.component.html
+++ b/src/app/admin/components/account/account.component.html
@@ -5,7 +5,81 @@
         Account Management
     </div>
     <div class="panel-body">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="panel panel-default">
+            <div class="panel-body form-horizontal payment-form">
+                <div class="show-account" *ngIf="keyWordEdit!='edit'">
+                    <p><strong>Fisrt name : </strong><span>{{this.account["fname"]}}</span></p>
+                    <p><strong>Last name : </strong><span>{{this.account["lname"]}}</span></p>
+                    <p><strong>Email : </strong><span>{{this.account["email"]}}</span></p>
+                    <p><strong>Phone Number : </strong><span>{{this.account["tel"]}}</span></p>
+                </div>
+                <div class="edit" *ngIf="keyWordEdit!='edit'">
+                    <a [routerLink]="['admin/account']" (click)="edit('edit')">แก้ไข</a>
+                </div>
+
+                <form (ngSubmit)="accountSubmit()" #accountForm="ngForm" *ngIf="keyWordEdit=='edit'">
+                    <div class="form-group">
+                        <label for="firstname" class="col-sm-3 control-label">First name</label>
+                        <div class="col-sm-9">
+                            <input type="name" class="form-control" id="firstname" placeholder="ชื่อ" required [(ngModel)]="account.fname" name="fname" #fname="ngModel" style="width:78%;">
+                            <div [hidden]="fname.valid || fname.pristine" class="alert alert-danger">กรุณากรอกชื่อ</div>
+                        </div>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label for="lastname" class="col-sm-3 control-label">Last name</label>
+                        <div class="col-sm-9">
+                            <input type="name" class="form-control" id="lasttname" placeholder="นามสกุล" required [(ngModel)]="account.lname" name="lname" #lname="ngModel" style="width:78%;">
+                            <div [hidden]="lname.valid || lname.pristine" class="alert alert-danger">กรุณากรอกนามสกุล</div>
+                        </div>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email" class="col-sm-3 control-label">Email</label>
+                        <div class="col-sm-9">
+                            <input type="email" class="form-control" id="email" placeholder="อีเมล" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required [(ngModel)]="account.email" name="email" #email="ngModel" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
+                                style="width:78%;">
+                            <div [hidden]="email.valid || email.pristine" class="alert alert-danger">
+                                <div [hidden]="!email.hasError('required')">กรุณากรอกอีเมล</div>
+                                <div [hidden]="!email.hasError('pattern')">รูปแบบอีเมลควรเป็น
+                                    <small>
+                                            <b>joe@abc.com</b>
+                                        </small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="phonenumber" class="col-sm-3 control-label">Phone number</label>
+                        <div class="col-sm-9">
+                            <input type="text" pattern="" class="form-control" id="phone" name="tel" placeholder="08X XXX XXXX" required pattern="[0-9]*" minlength="10" maxlength="10" [(ngModel)]="account.tel" #tel="ngModel" style="width:78%;">
+                            <div [hidden]="tel.valid || tel.pristine" class="alert alert-danger">
+                                <div [hidden]="!tel.hasError('minlength')">เบอร์ติดต่อควรมี 10 ตัว</div>
+                                <div [hidden]="!tel.hasError('required')">กรุณากรอกเบอ์โทรศัพท์มือถือ</div>
+                                <div [hidden]="!tel.hasError('pattern')">เบอร์เบอ์โทรศัพท์มือถือควรเป็นตัวเลขทั้งหมด</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group" id="btn-account">
+                        <div class="btn btn-outline-success" id="btn-account">
+                            <button type="submit" class="btn btn-success" [disabled]="!accountForm.form.valid">
+                                        Save
+                            </button>
+                        </div>
+                        <div class="btn btn-outline-danger" id="btn-account-cancal">
+                            <button type="submit" class="btn btn-danger" (click)="keyWordEdit=''">
+                                            Cancal
+                                </button>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+        </div>
     </div>
 </div>
